site/content/docs/5.2/components/tooltips.md
---
layout: docs
title: Всплывающие подсказки
description: Документация и примеры для добавления настраиваемых всплывающих подсказок Bootstrap с помощью CSS и JavaScript с использованием CSS3 для анимации и атрибутов данных для локального хранения заголовков.
group: components
toc: true
---

## Обзор

Что нужно знать при использовании плагина всплывающей подсказки:

- Всплывающие подсказки полагаются на стороннюю библиотеку [Popper](https://popper.js.org/) для позиционирования. Вы должны включить [popper.min.js]({{< param "cdn.popper" >}}) перед `bootstrap.js` или использовать один `bootstrap.bundle.min.js`, который содержит Popper.
- Всплывающие подсказки используются по соображениям производительности, поэтому **Вы должны инициализировать их самостоятельно**.
- Всплывающие подсказки с заголовками нулевой длины никогда не отображаются.
- Укажите `container: 'body'`, чтобы избежать проблем с рендерингом в более сложных компонентах (например, в наших группах ввода, группах кнопок и т.д.).
- Всплывающие подсказки для скрытых элементов работать не будут.
- Всплывающие подсказки для элементов `.disabled` или `disabled` должны запускаться для элемента оболочки.
- При запуске от гиперссылок, охватывающих несколько строк, всплывающие подсказки будут центрированы. Используйте `white-space: nowrap;` на Ваших `<a>`, чтобы избежать такого поведения.
- Всплывающие подсказки необходимо скрыть до того, как соответствующие элементы будут удалены из модели DOM.
- Всплывающие подсказки могут запускаться благодаря элементу внутри теневой модели DOM.

Получил все это? Отлично, давайте посмотрим, как они работают, на нескольких примерах.

{{< callout info >}}
{{< partial "callout-info-sanitizer.md" >}}
{{< /callout >}}

{{< callout info >}}
{{< partial "callout-info-sanitizer.md" >}}
{{< /callout >}}

{{< callout info >}}
{{< partial "callout-info-prefersreducedmotion.md" >}}
{{< /callout >}}

## Примеры

### Включить всплывающие подсказки

Как упоминалось выше, вы должны инициализировать всплывающие подсказки, прежде чем их можно будет использовать. Один из способов инициализировать все всплывающие подсказки на странице — выбрать их по их атрибуту `data-bs-toggle`, например:

```js
const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
```

### Подсказки к ссылкам

Наведите курсор на ссылки ниже, чтобы увидеть всплывающие подсказки:

{{< example class="tooltip-demo" stackblitz_add_js="true" >}}
  <p class="muted">Текст-заполнитель для демонстрации некоторых <a href="#" data-bs-toggle="tooltipdata-bs-titleТултип по умолчанию">встроенных ссылок</a> с подсказками. Теперь это просто наполнитель, а не убийца. Содержание размещено здесь только для имитации присутствия <a href="#" data-bs-toggle="tooltip" data-bs-title="Другой тултип">настоящего текста</a>. И все это просто для того, чтобы дать Вам представление о том, как всплывающие подсказки будут выглядеть при использовании в реальных ситуациях. Надеюсь, Вы теперь увидели, как <a href="#" data-bs-toggle="tooltip" data-bs-title="Еще один здесь тоже">эти всплывающие подсказки по ссылкам</a> могут работать на практике, если Вы их используете на <a href="#" data-bs-toggle="tooltip" data-bs-title="The last tip!">Вашем собственном </a> сайте или проекте. </p>
{{< /example >}}

{{< callout warning >}}
{{< partial "callout-warning-data-bs-title-vs-title.md" >}}
{{< /callout >}}

### Пользовательские всплывающие подсказки

{{< added-in "5.2.0" >}}

Вы можете настроить внешний вид всплывающих подсказок с помощью [CSS-переменных](#variables). Мы устанавливаем пользовательский класс с `data-bs-custom-class="custom-tooltip"`, чтобы ограничить наш пользовательский внешний вид и использовать его для переопределения локальной переменной CSS.

{{< scss-docs name="custom-tooltip" file="site/assets/scss/_component-examples.scss" >}}

{{< example class="tooltip-demo" stackblitz_add_js="true" >}}
<button type="button" class="btn btn-secondary"
        data-bs-toggle="tooltip" data-bs-placement="top"
        data-bs-custom-class="custom-tooltip"
        data-bs-title="This top tooltip is themed via CSS variables.">
  Пользовательская подсказка
</button>
{{< /example >}}

### Направления

Наведите курсор на кнопки ниже, чтобы увидеть четыре направления подсказок: вверх, вправо, внизу и влево. Направления зеркалируются при использовании Bootstrap в RTL.

<div class="bd-example tooltip-demo">
  <div class="bd-example-tooltips">
    <button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Подсказка вверху">Подсказка вверху</button>
    <button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="Подсказка справа">Подсказка справа</button>
    <button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Подсказка внизу">Подсказка внизу</button>
    <button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="left" data-bs-title="Подсказка слева">Подсказка слева</button>
    <button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-html="true" data-bs-title="<em>Подсказка</em> <u>с</u> <b>HTML</b>">Всплывающая подсказка с HTML</button>
  </div>
</div>

```html
<button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Подсказка вверху">
  Подсказка вверху
</button>
<button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="Подсказка справа">
  Подсказка справа
</button>
<button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Подсказка внизу">
  Подсказка внизу
</button>
<button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="left" data-bs-title="Подсказка слева">
  Подсказка слева
</button>
```

И с добавленным пользовательским HTML:

```html
<button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-html="true" data-bs-title="<em>Подсказка</em> <u>с</u> <b>HTML</b>">
  Всплывающая подсказка с HTML
</button>
```

С SVG:

<div class="bd-example tooltip-demo">
  <a href="#" class="d-inline-block" data-bs-toggle="tooltip" data-bs-title="Подсказка по умолчанию">
    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 100 100">
      <rect width="100%" height="100%" fill="#563d7c" />
      <circle cx="50" cy="50" r="30" fill="#007bff" />
    </svg>
  </a>
</div>

## CSS

### Переменные

{{< added-in "5.2.0" >}}

Как часть развивающегося подхода Bootstrap к переменным CSS, всплывающие подсказки теперь используют локальные переменные CSS в `.tooltip` для расширенной настройки в реальном времени. Значения переменных CSS задаются через Sass, поэтому настройка Sass по-прежнему поддерживается.

{{< scss-docs name="tooltip-css-vars" file="scss/_tooltip.scss" >}}

### Переменные Sass

{{< scss-docs name="tooltip-variables" file="scss/_variables.scss" >}}

## Использование

Плагин всплывающих подсказок генерирует контент и разметку по запросу и по умолчанию помещает всплывающие подсказки после их триггерного элемента.

Запуск всплывающей подсказки через JavaScript:

```js
const exampleEl = document.getElementById('example')
const tooltip = new bootstrap.Tooltip(exampleEl, options)
```

{{< callout warning >}}

##### Переполнение `auto` и `scroll`

Положение всплывающей подсказки пытается автоматически измениться, когда **родительский контейнер** имеет `overflow: auto` или `overflow: scroll`, как наш `.table-responsive`, но по-прежнему сохраняет исходное расположение размещения. Чтобы решить эту проблему, установите [параметр `boundary`](https://popper.js.org/docs/v2/modifiers/flip/#boundary) (для модификатора переворота, использующего параметр `popperConfig`) для любого HTMLElement на переопределить значение по умолчанию `'clippingParents'`, например, `document.body`:

```js
const tooltip = new bootstrap.Tooltip('#example', {
  boundary: document.body // или document.querySelector('#boundary')
})
```

{{< /callout >}}

### Разметка

Требуемая разметка для всплывающей подсказки - это только атрибут `data` и `title` HTML-элемента, для которого Вы хотите иметь всплывающую подсказку. Сгенерированная разметка всплывающей подсказки довольно проста, хотя для нее требуется позиция (по умолчанию плагином установлено значение `top`).

{{< callout warning >}}

##### Создание всплывающих подсказок для пользователей клавиатуры и вспомогательных технологий

Вы должны добавлять всплывающие подсказки только к HTML-элементам, которые традиционно ориентированы на клавиатуру и являются интерактивными (например, ссылки или элементы управления формы). Хотя произвольные элементы HTML (такие как `<span>`) можно сделать доступными для фокусировки, добавив атрибут `tabindex="0"`, это добавит потенциально раздражающие и сбивающие с толку позиции табуляции на неинтерактивных элементах для пользователей клавиатуры, и большинство Вспомогательные технологии в настоящее время не объявляют всплывающую подсказку в этой ситуации. Кроме того, не полагайтесь исключительно на `hover` в качестве триггера для Вашей всплывающей подсказки, так как это сделает невозможным запуск ваших всплывающих подсказок для пользователей клавиатуры.
{{< /callout >}}

```html
<!-- HTML для записи -->
<a href="#" data-bs-toggle="tooltip" data-bs-title="Текст всплывающей подсказки!">Наведите на меня</a>

<!-- Разметка, созданная плагином -->
<div class="tooltip bs-tooltip-top" role="tooltip">
  <div class="tooltip-arrow"></div>
  <div class="tooltip-inner">
    Текст всплывающей подсказки!
  </div>
</div>
```

### Отключенные элементы

Элементы с атрибутом `disabled` не являются интерактивными, то есть пользователи не могут сфокусироваться, навести на них курсор или щелкнуть их, чтобы вызвать всплывающую подсказку (или всплывающее окно). В качестве обходного пути Вы захотите вызвать всплывающую подсказку из оболочки `<div>` или `<span>`, в идеале сделанной с фокусировкой на клавиатуре, используя `tabindex="0"`.

<div class="tooltip-demo">
{{< example >}}
<span class="d-inline-block" tabindex="0" data-bs-toggle="tooltip" data-bs-title="Отключенная подсказка">
  <button class="btn btn-primary" type="button" disabled>Отключенная кнопка</button>
</span>
{{< /example >}}
</div>

### Опции

{{< markdown >}}
{{< partial "js-data-attributes.md" >}}
{{< /markdown >}}

{{< callout warning >}}
Обратите внимание, что по соображениям безопасности параметры `sanitize`, `sanitizeFn` и `allowList` не могут быть предоставлены с использованием атрибутов данных.
{{< /callout >}}

{{< bs-table "table" >}}
| Название | Тип | По умолчанию | Описание |
| --- | --- | --- | --- |
| `allowList` | object | [Значение по умолчанию]({{< docsref "/getting-started/javascript#sanitizer" >}}) | Объект, который содержит разрешенные атрибуты и теги. |
| `animation` | boolean | `true` | Применить CSS-переход затухания к всплывающей подсказке. |
| `boundary` | string, element | `'clippingParents'` | Граница ограничения переполнения всплывающей подсказки (применяется только к модификатору Popper preventOverflow). По умолчанию это `'clippingParents'`, и он может принимать ссылку HTMLElement (только через JavaScript). Для получения дополнительной информации обратитесь к [по обнаружению переполнения Popper](https://popper.js.org/docs/v2/utils/detect-overflow/#boundary). |
| `container` | string, element, false | `false` | Добавляет всплывающую подсказку к определенному элементу. Пример: `container: 'body'`. Этот параметр особенно удобен тем, что позволяет расположить всплывающую подсказку в потоке документа рядом с инициирующим элементом, что предотвратит всплывающую подсказку от инициирующего элемента во время изменения размера окна. |
| `customClass` | string, function | `''` | Добавляйте классы во всплывающую подсказку, когда она отображается. Обратите внимание, что эти классы будут добавлены в дополнение к любым классам, указанным в шаблоне. Чтобы добавить несколько классов, разделите их пробелами: `'class-1 class-2'`. Вы также можете передать функцию, которая должна возвращать одну строку, содержащую дополнительные имена классов. |
| `delay` | number, object | `0` | Задержка отображения и скрытия всплывающей подсказки (мс) — не относится к ручному типу триггера. Если указано число, задержка применяется как для скрытия, так и для показа. Структура объекта: `delay: { "show": 500, "hide": 100 }`. |
| `fallbackPlacements` | array | `['top', 'right', 'bottom', 'left']` | Определите резервные места размещения, предоставив список мест размещения в виде массива (в порядке предпочтения). Для получения дополнительной информации обратитесь к [документации поведения Popper](https://popper.js.org/docs/v2/modifiers/flip/#fallbackplacements). |
| `html` | boolean | `false` | Разрешить HTML в подсказке. Если true, теги HTML в `title` всплывающей подсказки будут отображаться во всплывающей подсказке. Если false, свойство `innerText` будет использоваться для вставки содержимого в DOM. Используйте текст, если вы беспокоитесь о XSS-атаках. |
| `offset` | array, string, function | `[0, 0]` | Смещение всплывающей подсказки относительно ее цели. Вы можете передать строку в атрибутах данных со значениями, разделенными запятыми, например: `data-bs-offset="10,20"`. Когда функция используется для определения смещения, она вызывается с объектом, содержащим размещение поппера, ссылку и прямоугольники поппера в качестве первого аргумента. Узел триггерного элемента DOM передается в качестве второго аргумента. Функция должна вернуть массив с двумя числами: [skidding](https://popper.js.org/docs/v2/modifiers/offset/#skidding-1), [distance](https://popper.js.org/docs/v2/modifiers/offset/#distance-1). Для получения дополнительной информации обратитесь к [документации по смещению Popper](https://popper.js.org/docs/v2/modifiers/offset/#options). |
| `placement` | string, function | `'top'` | Как расположить всплывающую подсказку: авто, сверху, снизу, слева, справа. Когда указано `auto`, подсказка будет динамически переориентироваться. Когда функция используется для определения размещения, она вызывается с узлом DOM всплывающей подсказки в качестве первого аргумента и узлом DOM триггерного элемента в качестве второго. Контекст `this` устанавливается на экземпляр всплывающей подсказки. |
| `popperConfig` | null, object, function | `null` | Чтобы изменить конфигурацию Popper по умолчанию в Bootstrap, смотрите [Конфигурация Popper](https://popper.js.org/docs/v2/constructors/#options). Когда функция используется для создания конфигурации Popper, она вызывается с объектом, который содержит конфигурацию Bootstrap по умолчанию Popper. Это поможет вам использовать и объединить настройки по умолчанию с вашей собственной конфигурацией. Функция должна возвращать объект конфигурации для Popper. |
| `sanitize` | boolean | `true` | Включите или отключите очистку. Если активированы параметры `'template'`, `'content'` и `'title'`, они будут очищены. |
| `sanitizeFn` | null, function | `null` | Здесь вы можете указать свою собственную функцию дезинфекции. Это может быть полезно, если вы предпочитаете использовать выделенную библиотеку для выполнения санитарной обработки. |
| `selector` | string, false | `false` | Если предоставлен селектор, объекты всплывающей подсказки будут делегированы указанным целям. На практике это также используется для применения всплывающих подсказок к динамически добавляемым элементам DOM (поддержка `jQuery.on`). Смотрите [эту проблему]({{< param repo >}}/issues/4215) и [информативный пример](https://codepen.io/Johann-S/pen/djJYPb). **Примечание**: Атрибут `title` нельзя использовать в качестве селектора. |
| `template` | string | `'<div class="tooltip" role="tooltip"><div class="tooltip-arrow"></div><div class="tooltip-inner"></div></div>'` | Базовый HTML для использования при создании всплывающей подсказки. `title` всплывающей подсказки будет вставлен в файл `.tooltip-inner`. `.tooltip-arrow` станет стрелкой всплывающей подсказки. Самый внешний элемент-оболочка должен иметь класс `.tooltip` и `role="tooltip"`. |
| `title` | string, element, function | `''` | Значение заголовка по умолчанию, если атрибут `title` отсутствует. Если задана функция, она будет вызываться со ссылкой `this`, установленной на элемент, к которому прикреплено всплывающее окно. |
| `trigger` | string | `'hover focus'` | Как срабатывает всплывающая подсказка: щелчок, наведение, фокус, вручную. Вы можете передать несколько триггеров; разделяйте их пробелом. `'manual'` указывает, что всплывающая подсказка будет вызываться программно с помощью методов `.tooltip('show')`, `.tooltip('hide')` и `.tooltip('toggle')`; это значение нельзя комбинировать ни с каким другим триггером. `'hover'` сам по себе приведет к всплывающим подсказкам, которые нельзя активировать с помощью клавиатуры, и их следует использовать только в том случае, если существуют альтернативные методы передачи той же информации для пользователей клавиатуры. |
{{< /bs-table >}}

{{< callout info >}}

#### Атрибуты данных для отдельных всплывающих подсказок

В качестве альтернативы параметры для отдельных всплывающих подсказок можно указать с помощью атрибутов данных, как описано выше.
{{< /callout >}}

#### Использование функции с `popperConfig`

```js
const tooltip = new bootstrap.Tooltip(element, {
  popperConfig(defaultBsPopperConfig) {
    // const newPopperConfig = {...}
    // use defaultBsPopperConfig if needed...
    // return newPopperConfig
  }
})
```

### Методы

{{< callout danger >}}
{{< partial "callout-danger-async-methods.md" >}}
{{< /callout >}}

{{< bs-table "table" >}}
| Метод | Описание |
| --- | --- |
| `disable` | Удаляет возможность отображения всплывающей подсказки элемента. Всплывающая подсказка будет отображаться только в том случае, если она снова включена. |
| `dispose` | Скрывает и уничтожает всплывающую подсказку элемента (удаляет сохраненные данные в элементе DOM). Всплывающие подсказки, использующие делегирование (которые создаются с помощью [опции `selector`](#options)) не могут быть уничтожены по отдельности в элементах-триггерах-потомках. |
| `enable` | Позволяет отображать всплывающую подсказку элемента. **Подсказки включены по умолчанию.** |
| `getInstance` | *Статический* метод, позволяющий получить экземпляр всплывающей подсказки, связанный с элементом DOM, или создать новый, если он не был инициализирован. |
| `getOrCreateInstance` | *Статический* метод, позволяющий получить экземпляр всплывающей подсказки, связанный с элементом DOM, или создать новый, если он не был инициализирован. |
| `hide` | Скрывает всплывающую подсказку элемента. **Возвращает вызывающему объекту до того, как всплывающая подсказка будет фактически скрыта** (т. е. до того, как произойдет событие `hidden.bs.tooltip`). Это считается «ручным» срабатыванием всплывающей подсказки. |
| `setContent` | Дает возможность изменить содержимое всплывающей подсказки после ее инициализации. |
| `show` | Отображает всплывающую подсказку элемента. **Возвращает вызывающему объекту до того, как всплывающая подсказка действительно будет показана** (т. е. до того, как произойдет событие `shown.bs.tooltip`). Это считается «ручным» срабатыванием всплывающей подсказки. Подсказки с заголовками нулевой длины никогда не отображаются. |
| `toggle` | Переключает всплывающую подсказку элемента. **Возвращает вызывающему объекту до того, как всплывающая подсказка действительно будет показана или скрыта** (т. е. до того, как произойдет событие `shown.bs.tooltip` или `hidden.bs.tooltip`). Это считается «ручным» срабатыванием всплывающей подсказки. |
| `toggleEnabled` | Переключает возможность отображения или скрытия всплывающей подсказки элемента. |
| `update` | Обновляет положение всплывающей подсказки элемента. |
{{< /bs-table >}}

```js
const tooltip = bootstrap.Tooltip.getInstance('#example') // Возвращает экземпляр всплывающей подсказки Bootstrap

// setContent example
tooltip.setContent({ '.tooltip-inner': 'another title' })
```

{{< callout info >}}
Метод `setContent` принимает аргумент `object`, где каждый ключ свойства является допустимым селектором `string` в шаблоне всплывающего окна, а каждое связанное значение свойства может быть `string` | `element` | `function` | `null`
{{< /callout >}}

### События

{{< bs-table >}}
| Событие | Описание |
| --- | --- |
| `hide.bs.tooltip` | Это событие запускается сразу после вызова метода экземпляра `hide`. |
| `hidden.bs.tooltip` | Это событие запускается, когда всплывающее окно перестает быть скрытым от пользователя (будет ждать завершения переходов CSS). |
| `inserted.bs.tooltip` | Это событие запускается после события `show.bs.tooltip`, когда шаблон всплывающей подсказки был добавлен в DOM. |
| `show.bs.tooltip` | Это событие срабатывает немедленно при вызове метода экземпляра `show`. |
| `shown.bs.tooltip` | Это событие запускается, когда всплывающее окно становится видимым для пользователя (будет ждать завершения переходов CSS). |
{{< /bs-table >}}

```js
const myTooltipEl = document.getElementById('myTooltip')
const tooltip = bootstrap.Tooltip.getOrCreateInstance(myTooltipEl)

myTooltipEl.addEventListener('hidden.bs.tooltip', () => {
  // делайте что-нибудь...
})

tooltip.hide()
```
